<package format="3">
  <name>can_comm</name>
  <version>0.0.1</version>
  <description>CAN communication node, mirroring serial_comm_node behavior over CAN bus.</description>

  <maintainer email="todo@example.com">TODO_MAINTAINER</maintainer>
  <license>TODO_LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sentry_msgs</depend>
  <depend>rm_referee_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
