<?xml version="1.0"?>
<package format="3">
  <name>sentry_msgs</name>
  <version>0.0.2</version>
  <description>Sentry selected single-field messages (ROS2).</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
