cmake_minimum_required(VERSION 3.8)
project(sentry_navigation)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ===== 查找依赖包 =====
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(nav2_bringup REQUIRED)
find_package(nav2_common REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(std_msgs REQUIRED)

include_directories(include)

# ===== 构建 TF Odom Publisher 节点 =====
add_executable(tf_odom_publisher 
  src/tf_odom_publisher.cpp
)

ament_target_dependencies(tf_odom_publisher
  rclcpp
  tf2_ros
  tf2_geometry_msgs
  geometry_msgs
  nav_msgs
  tf2_msgs
  tf2
)

# ===== 构建 TF Only Odom 节点（简化版，仅发布 odom->base_link 和静态 TF） =====
add_executable(tf_only_odom
  src/tf_only_odom.cpp
)

ament_target_dependencies(tf_only_odom
  rclcpp
  tf2_ros
  tf2_geometry_msgs
  geometry_msgs
  nav_msgs
  tf2_msgs
  tf2
)

# ===== 安装可执行文件 =====
install(TARGETS
  tf_odom_publisher
  tf_only_odom
  DESTINATION lib/${PROJECT_NAME}
)

install(PROGRAMS
  scripts/tf_monitor.py
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
