[package]
name = "lightning"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
nav_msgs = "*"
builtin_interfaces = "*"
geometry_msgs = "*"
std_msgs = "*"
sensor_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'nav_msgs/serde', 'builtin_interfaces/serde', 'geometry_msgs/serde', 'std_msgs/serde', 'sensor_msgs/serde']

[package.metadata.ros-env]
include = true
